--- a/upcomingmatch.html
+++ b/upcomingmatch.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upcomming Match</title>
+    <!--font awesome-->
     <script src="https://kit.fontawesome.com/b5a1285179.js" crossorigin="anonymous"></script>
+    <!--google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <!--stylesheet-->
     <link rel="stylesheet" href="match.css">
 </head>
 <body>
+    <!--header start-->
     <header>
         <section>
            <div class="top-section" >
@@ -22,12 +26,14 @@
            </div>
         </section>
         </header>
+         <!--header end-->
+    <!--main-section start-->
         <main class="main-section">
              <section class="section-form">
                 <div class="form-section">
-                    <input type="button" value="Upcoming Match">
+                    <input  class="blog" type="button" value="Upcoming Match">
                     <input type="button" value="All Group">
-                    <input id="blog" type="button" value="Blog">
+                    <input   type="button" value="Blog">
                 </div>
              </section>
              <section class="match">
@@ -90,6 +96,8 @@
                 </div>
              </section>
         </main>
+        <!--main-section end-->
+    <!--footer section start-->
         <footer>
             <h2>Goal</h2>
             <hr>
