--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup</title>
+    <!--font awesome-->
     <script src="https://kit.fontawesome.com/b5a1285179.js" crossorigin="anonymous"></script>
+    <!--google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <!--stylesheet-->
     <link rel="stylesheet" href="style.css">
    
 </head>
 <body>
+    <!--header start-->
     <header>
         <section>
            <div class="top-section" >
@@ -23,10 +27,12 @@
            </div>
         </section>
     </header>
+    <!--header end-->
+    <!--main-section start-->
     <main>
         <section class="section-form">
             <div class="form-section">
-                <input type="button" value="Upcoming Match">
+                <a href="upcomingmatch.html">   <input type="button" value="Upcoming Match"></a>
                 <input type="button" value="All Group">
                 <input id="blog" type="button" value="Blog">
             </div>
@@ -90,6 +96,8 @@
         </div>
        </section>
     </main>
+    <!--main-section end-->
+    <!--footer section start-->
     <footer>
         <h2>Goal</h2>
         <hr>
